the one with just one symbol/y.output
Terminals unused in grammar

   LT
   GT
   EQ


Grammar

    0 $accept: start $end

    1 start: program

    2 program: stmts

    3 stmts: stmts stmt
    4      | /* empty */

    5 stmt: ID ASSIGN_OP expr END
    6     | READ '(' ID ')' END
    7     | WRITE '(' expr ')' END

    8 expr: expr P expr
    9     | expr M expr
   10     | expr S expr
   11     | expr R expr
   12     | expr D expr
   13     | '(' expr ')'
   14     | M expr
   15     | expr C expr
   16     | NUMBER
   17     | ID


Terminals, with rules where they appear

$end (0) 0
'(' (40) 6 7 13
')' (41) 6 7 13
error (256)
NUMBER (258) 16
END (259) 5 6 7
P (260) 8
M (261) 9 14
S (262) 10
D (263) 12
C (264) 15
R (265) 11
READ (266) 6
WRITE (267) 7
ASSIGN_OP (268) 5
ID (269) 5 6 17
LT (270)
GT (271)
EQ (272)
UMINUS (273)


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
start (22)
    on left: 1, on right: 0
program (23)
    on left: 2, on right: 1
stmts (24)
    on left: 3 4, on right: 2 3
stmt (25)
    on left: 5 6 7, on right: 3
expr (26)
    on left: 8 9 10 11 12 13 14 15 16 17, on right: 5 7 8 9 10 11 12
    13 14 15


state 0

    0 $accept: . start $end

    $default  reduce using rule 4 (stmts)

    start    go to state 1
    program  go to state 2
    stmts    go to state 3


state 1

    0 $accept: start . $end

    $end  shift, and go to state 4


state 2

    1 start: program .

    $default  reduce using rule 1 (start)


state 3

    2 program: stmts .
    3 stmts: stmts . stmt

    READ   shift, and go to state 5
    WRITE  shift, and go to state 6
    ID     shift, and go to state 7

    $default  reduce using rule 2 (program)

    stmt  go to state 8


state 4

    0 $accept: start $end .

    $default  accept


state 5

    6 stmt: READ . '(' ID ')' END

    '('  shift, and go to state 9


state 6

    7 stmt: WRITE . '(' expr ')' END

    '('  shift, and go to state 10


state 7

    5 stmt: ID . ASSIGN_OP expr END

    ASSIGN_OP  shift, and go to state 11


state 8

    3 stmts: stmts stmt .

    $default  reduce using rule 3 (stmts)


state 9

    6 stmt: READ '(' . ID ')' END

    ID  shift, and go to state 12


state 10

    7 stmt: WRITE '(' . expr ')' END

    NUMBER  shift, and go to state 13
    M       shift, and go to state 14
    ID      shift, and go to state 15
    '('     shift, and go to state 16

    expr  go to state 17


state 11

    5 stmt: ID ASSIGN_OP . expr END

    NUMBER  shift, and go to state 13
    M       shift, and go to state 14
    ID      shift, and go to state 15
    '('     shift, and go to state 16

    expr  go to state 18


state 12

    6 stmt: READ '(' ID . ')' END

    ')'  shift, and go to state 19


state 13

   16 expr: NUMBER .

    $default  reduce using rule 16 (expr)


state 14

   14 expr: M . expr

    NUMBER  shift, and go to state 13
    M       shift, and go to state 14
    ID      shift, and go to state 15
    '('     shift, and go to state 16

    expr  go to state 20


state 15

   17 expr: ID .

    $default  reduce using rule 17 (expr)


state 16

   13 expr: '(' . expr ')'

    NUMBER  shift, and go to state 13
    M       shift, and go to state 14
    ID      shift, and go to state 15
    '('     shift, and go to state 16

    expr  go to state 21


state 17

    7 stmt: WRITE '(' expr . ')' END
    8 expr: expr . P expr
    9     | expr . M expr
   10     | expr . S expr
   11     | expr . R expr
   12     | expr . D expr
   15     | expr . C expr

    P    shift, and go to state 22
    M    shift, and go to state 23
    S    shift, and go to state 24
    D    shift, and go to state 25
    C    shift, and go to state 26
    R    shift, and go to state 27
    ')'  shift, and go to state 28


state 18

    5 stmt: ID ASSIGN_OP expr . END
    8 expr: expr . P expr
    9     | expr . M expr
   10     | expr . S expr
   11     | expr . R expr
   12     | expr . D expr
   15     | expr . C expr

    END  shift, and go to state 29
    P    shift, and go to state 22
    M    shift, and go to state 23
    S    shift, and go to state 24
    D    shift, and go to state 25
    C    shift, and go to state 26
    R    shift, and go to state 27


state 19

    6 stmt: READ '(' ID ')' . END

    END  shift, and go to state 30


state 20

    8 expr: expr . P expr
    9     | expr . M expr
   10     | expr . S expr
   11     | expr . R expr
   12     | expr . D expr
   14     | M expr .
   15     | expr . C expr

    $default  reduce using rule 14 (expr)


state 21

    8 expr: expr . P expr
    9     | expr . M expr
   10     | expr . S expr
   11     | expr . R expr
   12     | expr . D expr
   13     | '(' expr . ')'
   15     | expr . C expr

    P    shift, and go to state 22
    M    shift, and go to state 23
    S    shift, and go to state 24
    D    shift, and go to state 25
    C    shift, and go to state 26
    R    shift, and go to state 27
    ')'  shift, and go to state 31


state 22

    8 expr: expr P . expr

    NUMBER  shift, and go to state 13
    M       shift, and go to state 14
    ID      shift, and go to state 15
    '('     shift, and go to state 16

    expr  go to state 32


state 23

    9 expr: expr M . expr

    NUMBER  shift, and go to state 13
    M       shift, and go to state 14
    ID      shift, and go to state 15
    '('     shift, and go to state 16

    expr  go to state 33


state 24

   10 expr: expr S . expr

    NUMBER  shift, and go to state 13
    M       shift, and go to state 14
    ID      shift, and go to state 15
    '('     shift, and go to state 16

    expr  go to state 34


state 25

   12 expr: expr D . expr

    NUMBER  shift, and go to state 13
    M       shift, and go to state 14
    ID      shift, and go to state 15
    '('     shift, and go to state 16

    expr  go to state 35


state 26

   15 expr: expr C . expr

    NUMBER  shift, and go to state 13
    M       shift, and go to state 14
    ID      shift, and go to state 15
    '('     shift, and go to state 16

    expr  go to state 36


state 27

   11 expr: expr R . expr

    NUMBER  shift, and go to state 13
    M       shift, and go to state 14
    ID      shift, and go to state 15
    '('     shift, and go to state 16

    expr  go to state 37


state 28

    7 stmt: WRITE '(' expr ')' . END

    END  shift, and go to state 38


state 29

    5 stmt: ID ASSIGN_OP expr END .

    $default  reduce using rule 5 (stmt)


state 30

    6 stmt: READ '(' ID ')' END .

    $default  reduce using rule 6 (stmt)


state 31

   13 expr: '(' expr ')' .

    $default  reduce using rule 13 (expr)


state 32

    8 expr: expr . P expr
    8     | expr P expr .
    9     | expr . M expr
   10     | expr . S expr
   11     | expr . R expr
   12     | expr . D expr
   15     | expr . C expr

    S  shift, and go to state 24
    D  shift, and go to state 25
    C  shift, and go to state 26
    R  shift, and go to state 27

    $default  reduce using rule 8 (expr)


state 33

    8 expr: expr . P expr
    9     | expr . M expr
    9     | expr M expr .
   10     | expr . S expr
   11     | expr . R expr
   12     | expr . D expr
   15     | expr . C expr

    S  shift, and go to state 24
    D  shift, and go to state 25
    C  shift, and go to state 26
    R  shift, and go to state 27

    $default  reduce using rule 9 (expr)


state 34

    8 expr: expr . P expr
    9     | expr . M expr
   10     | expr . S expr
   10     | expr S expr .
   11     | expr . R expr
   12     | expr . D expr
   15     | expr . C expr

    C  shift, and go to state 26
    R  shift, and go to state 27

    $default  reduce using rule 10 (expr)


state 35

    8 expr: expr . P expr
    9     | expr . M expr
   10     | expr . S expr
   11     | expr . R expr
   12     | expr . D expr
   12     | expr D expr .
   15     | expr . C expr

    C  shift, and go to state 26
    R  shift, and go to state 27

    $default  reduce using rule 12 (expr)


state 36

    8 expr: expr . P expr
    9     | expr . M expr
   10     | expr . S expr
   11     | expr . R expr
   12     | expr . D expr
   15     | expr . C expr
   15     | expr C expr .

    R  shift, and go to state 27

    C  error (nonassociative)

    $default  reduce using rule 15 (expr)


state 37

    8 expr: expr . P expr
    9     | expr . M expr
   10     | expr . S expr
   11     | expr . R expr
   11     | expr R expr .
   12     | expr . D expr
   15     | expr . C expr

    R  error (nonassociative)

    $default  reduce using rule 11 (expr)


state 38

    7 stmt: WRITE '(' expr ')' END .

    $default  reduce using rule 7 (stmt)
